[gd_scene load_steps=7 format=2]

[ext_resource path="res://DynamicAudio.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://SpritePosAudio.gd" type="Script" id=3]
[ext_resource path="res://Pickup_Coin27.wav" type="AudioStream" id=4]
[ext_resource path="res://OptionButton.gd" type="Script" id=5]
[ext_resource path="res://PlayButton.gd" type="Script" id=6]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
editor/display_folded = true
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Sprite"]
stream = ExtResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "LeftRight"

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1022.0
margin_bottom = 599.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1015.0
margin_bottom = 592.0

[node name="SoundContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 1008.0
margin_bottom = 20.0
alignment = 1

[node name="OptionButton" type="OptionButton" parent="PanelContainer/VBoxContainer/SoundContainer"]
margin_left = 483.0
margin_right = 524.0
margin_bottom = 20.0
script = ExtResource( 5 )

[node name="ButtonContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 1008.0
margin_bottom = 44.0
alignment = 1

[node name="PlayButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
margin_left = 420.0
margin_right = 501.0
margin_bottom = 20.0
text = "Play Sound"
script = ExtResource( 6 )

[node name="StopButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
margin_left = 505.0
margin_right = 588.0
margin_bottom = 20.0
text = "Stop Sound"

[node name="SliderContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 1008.0
margin_bottom = 64.0

[node name="HSlider" type="HSlider" parent="PanelContainer/VBoxContainer/SliderContainer"]
margin_right = 16.0
margin_bottom = 16.0
min_value = -1.0
max_value = 1.0
step = 0.1
ticks_on_borders = false

[node name="LabelContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 1008.0
margin_bottom = 68.0

[node name="LoopContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 1008.0
margin_bottom = 96.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/LoopContainer"]
margin_top = 5.0
margin_right = 37.0
margin_bottom = 19.0
text = "Loop?"

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/LoopContainer"]
margin_left = 41.0
margin_right = 65.0
margin_bottom = 24.0

[node name="ReverbContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 1008.0
margin_bottom = 124.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/ReverbContainer"]
margin_top = 5.0
margin_right = 50.0
margin_bottom = 19.0
text = "Reverb?"

[node name="CheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/ReverbContainer"]
margin_left = 54.0
margin_right = 78.0
margin_bottom = 24.0

[node name="VolumeContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 1008.0
margin_bottom = 144.0

[node name="VolumeSlider" type="HSlider" parent="PanelContainer/VBoxContainer/VolumeContainer"]
margin_right = 16.0
margin_bottom = 16.0
min_value = -80.0
max_value = 0.0
value = -40.0
ticks_on_borders = false

[connection signal="item_selected" from="PanelContainer/VBoxContainer/SoundContainer/OptionButton" to="PanelContainer/VBoxContainer/SoundContainer/OptionButton" method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ButtonContainer/PlayButton" to="PanelContainer/VBoxContainer/ButtonContainer/PlayButton" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ButtonContainer/StopButton" to="PanelContainer/VBoxContainer/ButtonContainer/PlayButton" method="_on_StopButton_pressed"]
